2005-02-25  Tim Waugh <twaugh@redhat.com>

	* printer/Lexmark-X73.xml: Added IEEE 1284 information (RH
	  bug #149556).

2005-02-24  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/oki4w.xml, driver/oki4drv.xml, opt/95.xml, opt/121.xml,
	  opt/122.xml, opt/123.xml, opt/124.xml, opt/125.xml,
	  opt/oki4w-PageSize.xml, opt/oki4w-Resolution.xml: Added "oki4w"
	  GhostScript driver. Renamed old "oki4w" driver entry to
	  "oki4drv".

	* printer/Okidata-Okipage_4w.xml, printer/Okidata-Okipage_6w.xml,
	  printer/Okidata-Okipage_8z.xml,
	  printer/Okidata-Okipage_4wplus.xml, printer/Okidata-OL400w.xml:
	  Updated text because of the "oki4w" GhostScript driver.

2005-02-22  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Gestetner-*.xml, printer/Infotec-*.xml,
	  printer/Lanier-*.xml, printer/NRG-*.xml, printer/Ricoh-*.xml,
	  printer/Savin-*.xml, driver/PostScript.xml: Added a big bunch of
	  PostScript printers from Ricoh's 5 brands (Thanks to George Liu
	  from Ricoh, george dot liu at ussj dot ricoh dot com).

	* opt/162.xml: Removed the "Not capable" choice of the "Duplex"
	  option for the PostScript driver. This choice is not
	  Adobe-compliant according to "cupstestppd" of CUPS 1.1.22 or
	  later.
	
2005-02-15  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-DeskJet_3845.xml: Added HP DeskJet 3845.

	* printer/HP-DeskJet_3840.xml: Updated text.

	* printer/Epson-Stylus_Photo_R800.xml: Updated rating and text.

2005-02-11  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-DeskJet_6540.xml: Updated autodetection info
	  (MDK bug #13466).

	* printer/Minolta-magicolor_2430_DL.xml, driver/foo2zjs.xml,
	  opt/foo2zjs-PrinterType.xml, opt/foo2zjs-InputSlot.xml,
	  opt/foo2zjs-ICM.xml: Added the Minolta magicolor 2430 DL.

2005-02-10  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/pxl1010.xml, opt/2.xml, opt/PCL-XL-InputSlot.xml: Added
	  "pxl1010" driver entry for the HP LaserJet 1010/1012. It adds