@@ -24,7 +24,13 @@
     </text>
   </lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <parallel>
+      <manufacturer>Lexmark International</manufacturer>
+      <model>Lexmark Optra LaserPrinter</model>
+      <description>Lexmark Optra LaserPrinter</description>
+      <commandset>PCL 5 Emulation, PostScript Level 2 Emulation, NPAP, PJL</commandset>
+    </parallel>
+  </autodetect>
   <functionality>A</functionality>
   <driver>Postscript</driver>
   <unverified/><!--no "contrib_url"-->
