@@ -1,5 +1,8 @@
 2005-02-25  Tim Waugh <twaugh@redhat.com>
 
+	* printer/Lexmark-Optra_Rplus.xml: Added IEEE 1284 information (RH
+	  bug #149498).
+
 	* printer/Lexmark-X73.xml: Added IEEE 1284 information (RH
 	  bug #149556).
 
